@@ -236,3 +236,5 @@ Several build profiles are understood and supported:
 - cross: Needed when cross-building.  Currently this must be used
   together with pkg.linux.notools as not all the userland tools can be
   cross-built.
+- nopython: Disable Python bindings.  This currently disables building the
+  linux-perf-<version> package, as the perf program embeds Python.
