@@ -75,7 +75,9 @@ ifneq ($(DO_TOOLS),False)
   build-arch-arch: $(STAMPS_DIR)/build-tools
   binary-arch-arch: install-kbuild install-usbip install-liblockdep install-cpupower
   ifneq ($(filter alpha amd64 arm64 armel armhf hppa i386 mips mips64 mips64el mipsel powerpc powerpcspe ppc64 ppc64el s390 s390x sh4 sparc sparc64,$(DEB_BUILD_ARCH)),)
-    binary-arch-arch: install-perf
+    ifeq ($(filter nopython,$(DEB_BUILD_PROFILES)),)
+      binary-arch-arch: install-perf
+    endif
   endif
   ifneq ($(filter i386 amd64 x32,$(DEB_BUILD_ARCH)),)
     binary-arch-arch: install-hyperv-daemons
