@@ -26,18 +26,18 @@ Build-Depends:
  asciidoc <!stage1 !nodoc !pkg.linux.notools>,
  xmlto <!stage1 !nodoc !pkg.linux.notools>,
 # used by upstream to build perf
- bison <!stage1 !pkg.linux.notools>,
- flex:native <!stage1 !pkg.linux.notools>,
- gcc-multilib [amd64 ppc64 s390x sparc64] <!stage1 !pkg.linux.notools>,
- libaudit-dev <!stage1 !pkg.linux.notools>,
- libdw-dev <!stage1 !pkg.linux.notools>,
- libelf-dev <!stage1 !pkg.linux.notools>,
- libiberty-dev <!stage1 !pkg.linux.notools>,
- libnewt-dev <!stage1 !pkg.linux.notools>,
- libnuma-dev [amd64 arm64 hppa i386 mips mips64 mips64el mipsel mipsn32 mipsn32el mipsr6 mipsr6el mipsn32r6 mipsn32r6el mips64r6 mips64r6el powerpc powerpcspe ppc64 ppc64el sparc x32] <!stage1 !pkg.linux.notools>,
- libperl-dev <!stage1 !pkg.linux.notools>,
- libunwind8-dev [amd64 armel armhf arm64 i386] <!stage1 !pkg.linux.notools>,
- python-dev <!stage1 !pkg.linux.notools>,
+ bison <!stage1 !pkg.linux.notools !nopython>,
+ flex:native <!stage1 !pkg.linux.notools !nopython>,
+ gcc-multilib [amd64 ppc64 s390x sparc64] <!stage1 !pkg.linux.notools !nopython>,
+ libaudit-dev <!stage1 !pkg.linux.notools !nopython>,
+ libdw-dev <!stage1 !pkg.linux.notools !nopython>,
+ libelf-dev <!stage1 !pkg.linux.notools !nopython>,
+ libiberty-dev <!stage1 !pkg.linux.notools !nopython>,
+ libnewt-dev <!stage1 !pkg.linux.notools !nopython>,
+ libnuma-dev [amd64 arm64 hppa i386 mips mips64 mips64el mipsel mipsn32 mipsn32el mipsr6 mipsr6el mipsn32r6 mipsn32r6el mips64r6 mips64r6el powerpc powerpcspe ppc64 ppc64el sparc x32] <!stage1 !pkg.linux.notools !nopython>,
+ libperl-dev <!stage1 !pkg.linux.notools !nopython>,
+ libunwind8-dev [amd64 armel armhf arm64 i386] <!stage1 !pkg.linux.notools !nopython>,
+ python-dev <!stage1 !pkg.linux.notools !nopython>,
 # used by upstream to build usbip
  autoconf <!stage1 !pkg.linux.notools>,
  automake <!stage1 !pkg.linux.notools>,
