@@ -39,7 +39,7 @@ Description: CPU frequency and voltage scaling tools for Linux (development file
  This package contains the 'power/cpupower' headers and library shared objects.
 
 Package: linux-perf-@version@
-Build-Profiles: <!stage1 !pkg.linux.notools>
+Build-Profiles: <!stage1 !pkg.linux.notools !nopython>
 Section: devel
 Architecture: alpha amd64 arm64 armel armhf hppa i386 mips mips64 mips64el mipsel mipsn32 mipsn32el mipsr6 mipsr6el mipsn32r6 mipsn32r6el mips64r6 mips64r6el powerpc powerpcspe ppc64 ppc64el s390 s390x sh4 sparc sparc64
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${perl:Depends}, ${python:Depends}
