@@ -17,6 +17,7 @@ linux (4.7~rc2-1~exp1) UNRELEASED; urgency=medium
   * linux-cpupower: Define PACKAGE_BUGREPORT to refer to reportbug, not upstream
   * debian/README.source: Document the supported build profiles
   * debian/control: Fix build-dependencies for cross-building
+  * Add support for the nopython build profile, disabling the linux-perf package
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 07 Jun 2016 19:37:55 +0100
 
